# marsupial_optimizer

./: .gitignore  CMakeLists.txt  README.md  package.xml
analysis_data/py_script/: graph_cost_management.py  graph_execution_management.py  graph_management.py  graph_trajectory_management.py  resultados.csv  results_management.py  results_management_optimizery.py  tabla_resultados.csv
arduino_scketch/: reel_control_scketch _1.ino
arduino_scketch/reel_control_scketch/: reel_control_scketch.ino
arduino_scketch/servo_continuos_scketch/: servo_continuos_scketch.ino
arduino_scketch/test_motor_ros_scketch/: test_motor_ros_scketch.ino
cfg/: 3d_global_params.yaml  3d_local_params.yaml  OptimizationParams.cfg  arco_navigation.yaml  costmap_params.yaml  global_params.yaml  goals.yaml  hall45_drone_cutted.yaml  hall45_drone_cutted_ws.yaml  rellano45.yaml  rellano45_ws.yaml  stage_1.yaml  stage_1_ws.yaml  stage_2.yaml  stage_2_test_1.yaml  stage_2_test_2.yaml  stage_2_test_3.yaml  stage_2_ws.yaml  stage_3.yaml  stage_3_ws.yaml  stage_4.yaml  stage_4_ws.yaml  stage_5.yaml  stage_5_ws.yaml  stage_6.yaml  stage_6_ws.yaml  stage_7.yaml  stage_7_ws.yaml  stage_8_ws.yaml  teatro.yaml  teatro_obstacle.yaml  teatro_obstacle_ws.yaml  teatro_wall.yaml  teatro_wall_ws.yaml  teatro_ws.yaml  test_catenary_constraint.yaml  thermal_central.yaml  thermal_central_2022-03-14-13-05-27.yaml  thermal_central_2022-03-14-13-05-27_ws.yaml  thermal_central_complete.yaml  (+2 more)
cfg/optimized_path/: optimized_path_2022_2_21_01623.yaml  optimized_path_2022_2_21_0210.yaml  optimized_path_2022_2_21_02338.yaml  optimized_path_2022_2_21_02558.yaml  optimized_path_2022_2_27_212558.yaml  (+1 more)
include/misc/: grid3d.hpp  (+13 more)
launch/: 3d_global.launch  3d_global_and_optimizer_local_planner.launch  behavior_tree_node_marsupial.launch  empty_world.launch  environment.launch  global_and_optimizer_local_planner_fix_ugv.launch  grid3d.launch  marsupial_optimization_trayectory.launch  marsupial_optimization_trayectory_fix_ugv.launch  octomap_mapping.launch  octomap_server.launch  octomap_server_get_voxel_grid.launch  optimization_bag.launch  optimizer.launch  optimizer_and_planner_process.launch  optimizer_process.launch  optimizer_process_from_file.launch  planner_and_optimizer.launch  test_catenary_constarint.launch  test_tether_constraints.launch  trajectory_graph.launch  uav_optimization_trayectory.launch
maps/: arco_kitchen.pgm  arco_kitchen.yaml  first_plant45_cutted.bt  first_plant_45.bt  rehersal_1_1_map_cut.bt  stage_1.bt  stage_1_obstacles.bt  stage_1_traversability.bt  stage_2.bt  stage_2_0.bt  stage_2_obstacles.bt  stage_2_old.bt  stage_2_traversability.bt  stage_33.bt  stage_3_obstacles.bt  stage_3_traversability.bt  stage_4_obstacles.bt  stage_4_traversability.bt  stage_5.bt  stage_5_obstacles.bt  stage_5_traversability.bt  stage_6.bt  stage_6_obstacles.bt  stage_6_traversability.bt  stage_7_2.bt  stage_7_beta.bt  stage_7_obstacles.bt  stage_7_traversability.bt  teatro_obstacles.bt  teatro_traversability.bt  teatro_wall.bt  teatro_wall_obstacles.bt  teatro_wall_traversability.bt  thermal_central.yaml  thermal_central_traversability.bt  thermal_central_traversability_1.bt
msg/: marsupial_trajectory_optimized.msg
script/: 1_text2csv_changed_point2colon.py  convert_text2csv.py  g2o_installation.sh  goal_stage_1.sh  goal_stage_2.sh  marsupial_installation.sh  marsupial_setup.sh  plot_result_benchmark_catenary_checker.py  plot_result_feasibility_trajectory.py  plot_result_smoothness.py  results_management.py  results_management_catenary.py  results_management_obstacles.py  results_management_optimizery.py  results_management_times_RRTstar.py  setup_marsupial_platform.sh  setup_ubuntu_20.sh  text2csv_changed_point2colon.py
src/: analisis.txt  bisection_catenary_3D.cpp  bisection_catenary_3D_node.cpp  catenary_misc.cpp  catenary_solver_FC.hpp  catenary_solver_SM.hpp  catenary_solver_test.hpp  catenary_solver_test_ceres.cpp  ceres_constrain_equidistance.hpp  create_grid3d_node.cpp  g2o_distance_trajectory_edge.cpp  g2o_edge_acceleration.cpp  g2o_edge_catenary.cpp  g2o_edge_catenary_2_copy.cpp  g2o_edge_distance_vertex.cpp  g2o_edge_distance_xyz.cpp  g2o_edge_dynamic_catenary.cpp  g2o_edge_equi_distance.cpp  g2o_edge_kinematics.cpp  g2o_edge_obstacles.cpp  g2o_edge_obstacles_through.cpp  g2o_edge_time.cpp  g2o_edge_velocity.cpp  g2o_vertex_pointxyz.cpp  hellosimon.cc  import_path.cpp  local_plann_optimizer_ceres_test.cpp  manage_computed_path.cpp  marker_publisher.cpp  marsupial.hpp  marsupial_node.cpp  obstacle_constrain_ceres_test.hpp  optimizer_local_planner.cc  optimizer_local_planner.cpp  optimizer_local_planner.h  optimizer_local_planner02.cc  optimizer_local_planner1.cc  optimizer_local_planner11.cc  optimizer_local_planner_fix_ugv.cc  optimizer_local_planner_fix_ugv_node.cpp  (+13 more)
trees/: basic.xml  for_video_stage_1.xml  for_video_stage_2.xml  for_video_stage_3.xml  for_video_stage_4.xml  for_video_stage_5.xml  hall45_arco.xml  stage_1.xml  stage_1_2.xml  stage_1_goals.xml  stage_1_only_1_goal.xml  stage_2.xml  stage_2_2.xml  stage_2_goals.xml  stage_2_goals2.xml  stage_3.xml  stage_3_2.xml  stage_3_goals.xml  stage_4.xml  stage_4_2.xml  stage_4_goals.xml  stage_5.xml  stage_5_2.xml  stage_5_goals.xml  stage_6.xml  stage_6_2.xml  stage_6_goals.xml  stage_7.xml  stage_7_1.xml  stage_7_2.xml  stage_7_3.xml  stage_7_4.xml  stage_only_one_goal.xml  teatro_full.xml  teatro_half1.xml  teatro_half2.xml  teatro_one_wp.xml  teatro_wall.xml  teatro_white_wall.xml  teatro_white_wall2.xml  (+1 more)
viz/: dll_arco.rviz  dll_drone.rviz  marsupial.rviz  marsupial_simulation.rviz  mission_visualization.rviz  optimizer_process.rviz  test_catenary.rviz  traj_graph_mission.rviz
worlds/: caca.bt  gamma_stage7.bt  nuevomundo.world  stage_1.world  stage_2.world  stage_2_Oldchallenge.world  stage_3.world  stage_3_2.world  stage_4.world  stage_5.world  stage_6.world  stage_6_005.bt  stage_6_01.world  stage_7.world  stage_7_003.bt  stage_7_004.bt  stage_7_005.bt  stage_7_01.bt  stage_7_beta.world  stage_7_gamma.world  thermal_central.world  tunel_v_2.bt
(+260 files in other folders)
